# fixpoints

./: LICENSE  fixpoints.cabal  flake.nix  hie.yaml
src/: CoAlgebra.hs  CoInductive.hs  CoNat.hs  Expr.hs  Nat.hs  Stream.hs  Unit.hs  Void.hs
